Fixes infinite scroll flicker

--- a/src/components/animations/slidein.css
+++ b/src/components/animations/slidein.css
@@ -1,23 +1,21 @@
-@keyframes moveBox {
-    0% {
-        transform: translate(0, 0);
-        -webkit-transform: translate(0, 0);
+@keyframes moveOuterElement {
+    17.5%, 20% {
+        transform: translateY(-72px);
+    }
+    
+    37.5%, 40% {
+        transform: translateY(-144px);
+    }
+    
+    57.5%, 60% {
+        transform: translateY(-216px);
+    }
+    
+    77.5%, 80% {
+        transform: translateY(-288px);
     }
 
-    100% {
-        transform: translate(0, -360px);
-        -webkit-transform: translate(0, -360px);
-    }
-}
-
-@keyframes moveText {
-    0% {
-        transform: translate(0, 0);
-        -webkit-transform: translate(0, 0);
-    }
-
-    80%, 100% {
-        transform: translate(0, -72px);
-        -webkit-transform: translate(0, -72px);
+    97.5%, 100% {
+        transform: translateY(-360px);
     }
 }
